# sbnd_parsl

./: README.md  caf_entry_point.py  entry_point.py  pyproject.toml  reco_entry_point.py  requirements.txt
deprecated/: templates.py
fcls/: g4_sce_dirt_filter_lite_wc.fcl  prodoverlay_corsika_cosmics_proton_genie_rockbox_sce.fcl  reco1_sce_lite_wc2d.fcl  reco2_sce.fcl  wirecell_sim_sp_sbnd.fcl  wirecell_sim_sp_sbnd_opcrt.fcl
fcls/v09_84_00_01/: cafmakerjob_sbnd_sce.fcl  (+1 more)
parsl_tools/: utils.py
sbnd_parsl/: __init__.py  components.py  dfk_hacks.py  metadata.py  pyment_config  templates.py  utils.py  workflow.py
settings/: settings_caf_detsys_vars.json  settings_data_icarus.json  settings_reco2_from_gen_spack.json  settings_reco2_from_gen_spack_09_90_00.json  settings_reco2_from_gen_spack_09_91_02_01.json  settings_reco2_from_gen_spack_09_91_02_01_gpu.json  settings_spine.json  settings_spine_sbnd.json
test/: parser_from_settings.py
tests/: test_utils.py  test_workflow.py
tools/: lar_mon.sh  loop.sh  plot_node_log.py  plot_spine_node_log.py  spine_mon.sh
workflows/: .caf_keep_percent.py.swo  caf_detsys_vars.py  caf_from_gen.py  caf_from_reco1.py  caf_from_reco1_detsys_variations.py  caf_from_reco2.py  caf_keep_percent.py  caf_keep_percent2.py  decode.py  decode_container.py  decode_icarus.py  decode_icarus_hacks.py  decode_sbnd.py  detsys_from_reco1.py  entry_point.py  example.py  example_parsl.py  icarus_caf.py  icarus_mc.py  log  reco2_from_gen.py  reco2_from_gen_spack.py  reco2_from_gen_spack_gpu.py  settings_detsys.json  spine.py  spine_sbnd.py
(+38 files in other folders)
